--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -1,26 +1,16 @@
 {
   "compilerOptions": {
-    "target": "es5",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
-    "allowJs": true,
-    "skipLibCheck": true,
+    "baseUrl": "src",
+    "jsx": "react",
+    "module": "commonjs",
+    "typeRoots": ["./src/@types", "./node_modules/@types"],
+    "noEmit": false,
     "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true,
-    "strict": true,
     "forceConsistentCasingInFileNames": true,
-    "noFallthroughCasesInSwitch": true,
-    "module": "esnext",
-    "moduleResolution": "node",
-    "resolveJsonModule": true,
-    "isolatedModules": true,
-    "noEmit": true,
-    "jsx": "react-jsx"
+    "strict": false,
+    "skipLibCheck": true,
+    "lib": ["es2017", "dom"],
+    "types": ["jest", "node"]
   },
-  "include": [
-    "src"
-  ]
+  "include": ["src", "src/index.tsx"]
 }
