--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -10,7 +10,7 @@
     "strict": false,
     "skipLibCheck": true,
     "lib": ["es2017", "dom"],
-    "types": ["jest", "node"]
+    "types": ["node", "jest", "@testing-library/jest-dom"]
   },
   "include": ["src", "src/index.tsx"]
 }
